# SkillForge

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt  weibo_trending_20260117_182829.html  weibo_trending_20260129_015748.html  weibo_trending_20260131_124630.html  weibo_trending_20260207_183521.html  weibo_trending_20260214_183442.html  weibo_trending_20260221_124533.html
.github/workflows/: deploy-pages.yml  scheduler.yml
output/: .gitkeep
output/static/: style.css
src/: __init__.py  config.py  runner.py
src/backends/: __init__.py  antigravity.py  base.py  claude.py  gemini.py  openai_backend.py
src/database/: __init__.py  client.py  models.py
src/reports/: __init__.py  generator.py
src/reports/templates/: base.html  index.html  report.html
src/skills/: __init__.py  base.py  registry.py  weibo_trending.py
